# langchain-redis-persist-memory

./: .env.example  README.md  main.py  pyproject.toml
src/: app.py  config.py
src/memory/: redis_memory.py
src/ui/: ui.html
tests/: test_redis_memory.py
